feat: add docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -8,9 +6,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: ${DATABASE_USER}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: rural_manager
     volumes:
       - pgdata:/var/lib/postgresql/data
 
@@ -23,15 +21,43 @@ services:
       - "3000:3000"
     depends_on:
       - db
-    volumes:
-      - .:/usr/src/app
     environment:
-      DATABASE_HOST: ${DATABASE_HOST}
-      DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_USER: ${DATABASE_USER}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      DATABASE_NAME: ${DATABASE_NAME}
-    command: npm run start:dev
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: postgres
+      DATABASE_NAME: rural_manager
+    command: npm run start:prod
+
+  seed:
+    image: node:18
+    depends_on:
+      - app
+    working_dir: /usr/src/app
+    volumes:
+      - ./:/usr/src/app
+    entrypoint: ["sh", "-c", "sleep 10 && npm install && npm run seed"]
+    environment:
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: postgres
+      DATABASE_NAME: rural_manager
+
+  e2e:
+    image: node:18
+    depends_on:
+      - seed
+    working_dir: /usr/src/app
+    volumes:
+      - ./:/usr/src/app
+    entrypoint: ["sh", "-c", "sleep 5 && npm install && npm run test:e2e"]
+    environment:
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: postgres
+      DATABASE_NAME: rural_manager
 
 volumes:
   pgdata:
