--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,13 +30,13 @@ services:
     command: npm run start:prod
 
   seed:
-    image: node:18
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       - app
     working_dir: /usr/src/app
-    volumes:
-      - ./:/usr/src/app
-    entrypoint: ["sh", "-c", "sleep 10 && npm install && npm run seed"]
+    entrypoint: ["sh", "-c", "sleep 10 && npm run seed"]
     environment:
       DATABASE_HOST: db
       DATABASE_PORT: 5432
@@ -45,13 +45,13 @@ services:
       DATABASE_NAME: rural_manager
 
   e2e:
-    image: node:18
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       - seed
     working_dir: /usr/src/app
-    volumes:
-      - ./:/usr/src/app
-    entrypoint: ["sh", "-c", "sleep 5 && npm install && npm run test:e2e"]
+    entrypoint: ["sh", "-c", "sleep 5 && npm run test:e2e"]
     environment:
       DATABASE_HOST: db
       DATABASE_PORT: 5432
